fix: logo color for dark mode

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -17,6 +17,7 @@
   --custom-content-color: #1f1f1f;
   --custom-content-color-emphasis: #000;
   --custom-background-color: #fdfdfd;
+  --logo-backgound-filter: 0;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
@@ -30,6 +31,10 @@ article a {
   color: var(--custom-content-color);
   padding-bottom: 2px;
   transition: box-shadow .1s ease-in-out;
+}
+
+nav img {
+  filter: invert(var(--logo-backgound-filter));
 }
 
 article a:hover {
@@ -68,6 +73,10 @@ footer a:hover {
   text-decoration: none;
 }
 
+nav .navbar__title {
+  color: var(--custom-primary) !important;
+}
+
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
   --ifm-color-primary: #25c2a0;
@@ -77,5 +86,7 @@ footer a:hover {
   --ifm-color-primary-light: #29d5b0;
   --ifm-color-primary-lighter: #32d8b4;
   --ifm-color-primary-lightest: #4fddbf;
+  --custom-content-color: #DDD;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+  --logo-backgound-filter: 1;
 }
